package org.exercise.payment.gateway.integration;

public interface InvoiceGenerator {
    final String DESCRIPTION = "Invoice Generator";
    String getDescription();
}
