package org.exercise.payment.gateway.integration;

public interface PaymentProcessor {
    final String DESCRIPTION = "Payment Processor";

    String getDescription();
}
