package org.exercise.payment.gateway.integration;

public interface RefundProcessor {
    final String DESCRIPTION = "Refund Processor";

    String getDescription();
}
